# marketing-online-python-backend

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py  utils.py
app/api/api_v1/: api.py
app/api/api_v1/auth/: endpoints.py  model.py  repository.py  service.py
app/api/api_v1/users/: endpoints.py  model.py  service.py
app/core/: application.py  config.py  depends.py  messages.py
app/core/security/: __init__.py  authentication.py  jwt.py
app/crud/: base.py  user.py
app/db/: __init__.py  session.py
app/email-templates/: new_account.html  reset_password.html
app/models/: user.py
app/schemas/: __init__.py  jwt.py  token.py  user.py
migrations/: env.py
migrations/versions/: ead82fc752d2_create_users_table.py
scripts/: environment.sh
tests/: test_app.py
